add list to webpage

--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
 <h1>hello world</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim nobis vitae aspernatur repellendus possimus atque. Labore quae accusamus, eaque natus amet, id, asperiores fugit aliquid eligendi libero vitae animi ducimus.</p>
+<p>Lorem ipsum dolor sit amet consectetur 
+    adipisicing elit. Enim nobis vitae aspernatur repellendus possimus atque. Labore quae accusamus, eaque natus amet, id, asperiores fugit aliquid eligendi libero vitae 
+    animi ducimus.</p>
+
+<ul>
+    <li>A</li>
+    <li>B</li>
+</ul>
